<resources>
    <string name="app_name">Moby</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="start_descendant_1">Start Descendant 1</string>
    <string name="start_descendant_2">Start Descendant 2</string>
    <string name="external_activities">External Activities</string>
    <string name="start_google_maps">Start Google Maps</string>
    <string name="information">Information</string>
    <string name="toast">Toast</string>
    <string name="dialog_message">Be careful when you choose, folks.</string>
    <string name="first_rb">First RB</string>
    <string name="second_rb">Second RB</string>
    <string name="third_rb">Third RB</string>
    <string name="first_cb">First CB</string>
    <string name="second_cb">Second CB</string>
    <string name="enter_text_here">Enter text here!</string>
    <string name="save">Save</string>
    <string name="go_to_sibling_activity">Go To Sibling Activity</string>
    <string name="i_do_nothing">I Do Nothing</string>
    <string name="pressed_ok">Pressed OK</string>
    <string name="pressed_cancel">Pressed Cancel</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="surprise">Surprise !</string>
    <string name="dismiss">Dismiss</string>
</resources>